--- a/src/main/java/com/technicalservice/resource/mail.properties
+++ b/src/main/java/com/technicalservice/resource/mail.properties
@@ -1,7 +1,7 @@
 smtp.ip=smtp.gmail.com
 smtp.port=587
-smtp.user=turkishdeveloper34@gmail.com
-smtp.password=trDeveloper34.
+smtp.user=mail@gmail.com
+smtp.password=mailsifre345
 smtp.type=tls
 sendMail=true
 domainForMailContent=http://localhost:8080/technicalservice
